tests/ui/issues/issue-5997-struct.stderr
error[E0401]: can't use generic parameters from outer item
  --> $DIR/issue-5997-struct.rs:2:14
   |
LL | fn f<T>() -> bool {
   |      - type parameter from outer item
LL |     struct S(T);
   |             -^ use of generic parameter from outer item
   |             |
   |             help: try introducing a local generic parameter here: `<T>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0401`.
